# AI-Negotiator

./: .gitignore  README.md  Workflow.drawio  main.py  pyproject.toml
ai-negotiator-backend/: main.py  pyproject.toml  server.py
ai-negotiator-backend/src/: app.py
ai-negotiator-backend/src/LLMs/: groq.py
ai-negotiator-backend/src/langgraph/: graph_builder.py
ai-negotiator-backend/src/nodes/: category_classifier.py  data_parser.py  data_validator.py  output_generator.py  result_analyser.py
ai-negotiator-backend/src/state/: state.py
ai-negotiator-backend/uploads/: data.csv
ai-negotiator-fronted/: package.json
ai-negotiator-fronted/public/: index.html
ai-negotiator-fronted/src/: App.js  index.css  index.js
ipynb/: temp.ipynb
src/: app.py
src/LLMs/: groq.py
src/config/: config.json
src/langgraph/: graph_builder.py
src/nodes/: category_classifier.py  data_parser.py  data_validator.py  output_generator.py  result_analyser.py
