[project]
name = "ai-negotiator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[all]>=0.116.1",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "langsmith>=0.4.8",
    "pandas>=2.3.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "tavily-python>=0.7.10",
    "uvicorn>=0.35.0",
]
